--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <title>Document</title>
 
-    <script src="proyecto novia/script.js"></script>
+    <script src="Proyecto Novia/script.js"></script>
 
-    <link rel="stylesheet" href="proyecto novia/style.css">
+    <link rel="stylesheet" href="Proyecto Novia/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
