--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Document</title>
     <script src="Proyecto Novia/script.js"></script>
     <link rel="stylesheet" href="Proyecto Novia/style.css">
@@ -16,11 +16,6 @@
 </head>
 
 
-
-
-
-
-
 <body>
 
     <header>
@@ -28,12 +23,6 @@
             <h1>Tu novia tiene razon</h1>
         </div>
     </header>
-
-
-
-
-
-    
 
         <main>
             <div class="principal">
@@ -64,26 +53,26 @@
                 </div>
                 <div class="fondo">
                     <div class="contenedor">
-                        <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
+                        <input type="button" value="Tus decisiones son mejores" id="decisiones" class="boton">
+                        <audio src="Proyecto Novia/sonidos/decisiones.mp3" id="decisionesSonido"></audio>
                     </div>
                 </div>
                 <div class="fondo">
                     <div class="contenedor">
-                        <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
+                        <input type="button" value="Tienes razón, nunca aprendo" id="aprendo" class="boton">
+                        <audio src="Proyecto Novia/sonidos/aprendo.mp3" id="aprendoSonido"></audio>
                     </div>
                 </div>
                 <div class="fondo">
                     <div class="contenedor">
-                        <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
+                        <input type="button" value="Voy a dejar de hacer estupideces" id="estupideces" class="boton">
+                        <audio src="Proyecto Novia/sonidos/estupideces.mp3" id="estupidecesSonido"></audio>
                     </div>
                 </div>
                 <div class="fondo">
                     <div class="contenedor">
-                        <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
+                        <input type="button" value="Perdona por no escuchar" id="escuchar" class="boton">
+                        <audio src="Proyecto Novia/sonidos/escuchar.mp3" id="escucharSonido"></audio>
                     </div>
                 </div>
             </div>
