--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
-    <title>Document</title>
+    <title>Tu novia tiene razon</title>
+    <meta name="description" content="Tu novia tiene razon, aqui tienes las mejores frases que lo demuestrar">
     <script src="Proyecto Novia/script.js"></script>
     <link rel="stylesheet" href="Proyecto Novia/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +14,7 @@
         rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4940896009577176"
         crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="Proyecto Novia/imagenes/logo.ico" type="image/x-icon">
 </head>
 
 
@@ -79,6 +81,12 @@
         </main>
 
     </div>
+
+    <footer>
+        <div class="pie">
+            <p>Creado por: Rodriguez Web Design</p>
+        </div>
+    </footer>
 </body>
 
 
