--- a/index.html
+++ b/index.html
@@ -79,8 +79,14 @@
                 </div>
             </div>
         </main>
-
     </div>
+
+    <article>
+        <h2>Mi novia tiene razon</h2>
+        <p class="articulo">Es obvio, tu novia tiene razon, siempre la tiene, y para eso es esta pagina, disfruta reproduciendo las frases que mas te va tocar
+            decir para evitar conflictos de pareja, usalo para apaciguarla, 100% comprobado
+        </p>
+    </article>
 
     <footer>
         <div class="pie">
