--- a/index.html
+++ b/index.html
@@ -26,73 +26,77 @@
         </div>
     </header>
 
-        <main>
-            <div class="principal">
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Tienes razon cariño" id="tienesRazon" class="boton">
-                        <audio src="Proyecto Novia/sonidos/tienesRazon.mp3" id="tienesRazonSonido"></audio>
-                    </div>
-                </div>
-
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Ha sido mi culpa" id="miCulpa" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miCulpa.mp3" id="miCulpaSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="No voy a quedar con mis amiguitas" id="misAmigas" class="boton">
-                        <audio src="Proyecto Novia/sonidos/misAmigas.mp3" id="misAmigasSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
-                        <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Tus decisiones son mejores" id="decisiones" class="boton">
-                        <audio src="Proyecto Novia/sonidos/decisiones.mp3" id="decisionesSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Tienes razón, nunca aprendo" id="aprendo" class="boton">
-                        <audio src="Proyecto Novia/sonidos/aprendo.mp3" id="aprendoSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Voy a dejar de hacer estupideces" id="estupideces" class="boton">
-                        <audio src="Proyecto Novia/sonidos/estupideces.mp3" id="estupidecesSonido"></audio>
-                    </div>
-                </div>
-                <div class="fondo">
-                    <div class="contenedor">
-                        <input type="button" value="Perdona por no escuchar" id="escuchar" class="boton">
-                        <audio src="Proyecto Novia/sonidos/escuchar.mp3" id="escucharSonido"></audio>
-                    </div>
+    <main>
+        <div class="principal">
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Tienes razon cariño" id="tienesRazon" class="boton">
+                    <audio src="Proyecto Novia/sonidos/tienesRazon.mp3" id="tienesRazonSonido"></audio>
                 </div>
             </div>
-        </main>
+
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Ha sido mi culpa" id="miCulpa" class="boton">
+                    <audio src="Proyecto Novia/sonidos/miCulpa.mp3" id="miCulpaSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="No voy a quedar con mis amiguitas" id="misAmigas" class="boton">
+                    <audio src="Proyecto Novia/sonidos/misAmigas.mp3" id="misAmigasSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Eres la mejor novia del mundo" id="mejorNovia" class="boton">
+                    <audio src="Proyecto Novia/sonidos/miNovia.mp3" id="mejorNoviaSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Tus decisiones son mejores" id="decisiones" class="boton">
+                    <audio src="Proyecto Novia/sonidos/decisiones.mp3" id="decisionesSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Tienes razón, nunca aprendo" id="aprendo" class="boton">
+                    <audio src="Proyecto Novia/sonidos/aprendo.mp3" id="aprendoSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Voy a dejar de hacer estupideces" id="estupideces" class="boton">
+                    <audio src="Proyecto Novia/sonidos/estupideces.mp3" id="estupidecesSonido"></audio>
+                </div>
+            </div>
+            <div class="fondo">
+                <div class="contenedor">
+                    <input type="button" value="Perdona por no escuchar" id="escuchar" class="boton">
+                    <audio src="Proyecto Novia/sonidos/escuchar.mp3" id="escucharSonido"></audio>
+                </div>
+            </div>
+        </div>
+    </main>
+    </div>
+    
+    <div class="final">
+        <article>
+            <h2>Mi novia tiene razon</h2>
+            <p class="articulo">Es obvio, tu novia tiene razon, siempre la tiene, y para eso es esta pagina, disfruta
+                reproduciendo las frases que mas te va tocar
+                decir para evitar conflictos de pareja, usalo para apaciguarla, 100% comprobado
+            </p>
+        </article>
+
+        <footer>
+            <div class="pie">
+                <p>Creado por: Rodriguez Web Design</p>
+            </div>
+        </footer>
     </div>
 
-    <article>
-        <h2>Mi novia tiene razon</h2>
-        <p class="articulo">Es obvio, tu novia tiene razon, siempre la tiene, y para eso es esta pagina, disfruta reproduciendo las frases que mas te va tocar
-            decir para evitar conflictos de pareja, usalo para apaciguarla, 100% comprobado
-        </p>
-    </article>
-
-    <footer>
-        <div class="pie">
-            <p>Creado por: Rodriguez Web Design</p>
-        </div>
-    </footer>
 </body>
 
 
